--- a/notebook2.ipynb
+++ b/notebook2.ipynb
@@ -27,7 +27,7 @@
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "\n",
     "# Configure loading\n",
-    "args = utils.load_config('./configs/reflow.yaml')\n",
+    "args = utils.load_config('./configs/diffusion-fast.yaml')\n",
     "\n",
     "# Set path\n",
     "MP4_DATA_PATH   = 'preprocess/mp4'\n",
@@ -159,9 +159,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Normalizing... : 100%|██████████| 1/1 [00:02<00:00,  2.20s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "from sep_wav import audio_norm\n",
     "\n",
@@ -182,9 +190,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Cutting... :   0%|          | 0/1 [00:00<?, ?it/s]C:\\Users\\PARK\\AppData\\Local\\Temp\\ipykernel_10920\\3370198765.py:4: FutureWarning: get_duration() keyword argument 'filename' has been renamed to 'path' in version 0.10.0.\n",
+      "\tThis alias will be removed in version 1.0.\n",
+      "  duration = librosa.get_duration(filename=filepath)\n",
+      "Cutting... : 100%|██████████| 1/1 [00:03<00:00,  3.46s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "import subprocess\n",
     "\n",
@@ -217,9 +236,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Removing... : 100%|██████████| 94/94 [00:05<00:00, 16.86it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "from sep_wav import get_ffmpeg_args\n",
     "import subprocess\n",
@@ -262,9 +289,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Moving... : 100%|██████████| 2/2 [00:00<00:00, 411.39it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "from types import SimpleNamespace\n",
     "from draw import main\n",
@@ -292,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -307,9 +342,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-07-17 19:32:09 | INFO | fairseq.tasks.hubert_pretraining | current directory is c:\\Users\\PARK\\Desktop\\Project\\DDSP-SVC\n",
-      "2024-07-17 19:32:09 | INFO | fairseq.tasks.hubert_pretraining | HubertPretrainingTask Config {'_name': 'hubert_pretraining', 'data': 'metadata', 'fine_tuning': False, 'labels': ['km'], 'label_dir': 'label', 'label_rate': 50.0, 'sample_rate': 16000, 'normalize': False, 'enable_padding': False, 'max_keep_size': None, 'max_sample_size': 250000, 'min_sample_size': 32000, 'single_target': False, 'random_crop': True, 'pad_audio': False}\n",
-      "2024-07-17 19:32:09 | INFO | fairseq.models.hubert.hubert | HubertModel Config: {'_name': 'hubert', 'label_rate': 50.0, 'extractor_mode': default, 'encoder_layers': 12, 'encoder_embed_dim': 768, 'encoder_ffn_embed_dim': 3072, 'encoder_attention_heads': 12, 'activation_fn': gelu, 'layer_type': transformer, 'dropout': 0.1, 'attention_dropout': 0.1, 'activation_dropout': 0.0, 'encoder_layerdrop': 0.05, 'dropout_input': 0.1, 'dropout_features': 0.1, 'final_dim': 256, 'untie_final_proj': True, 'layer_norm_first': False, 'conv_feature_layers': '[(512,10,5)] + [(512,3,2)] * 4 + [(512,2,2)] * 2', 'conv_bias': False, 'logit_temp': 0.1, 'target_glu': False, 'feature_grad_mult': 0.1, 'mask_length': 10, 'mask_prob': 0.8, 'mask_selection': static, 'mask_other': 0.0, 'no_mask_overlap': False, 'mask_min_space': 1, 'mask_channel_length': 10, 'mask_channel_prob': 0.0, 'mask_channel_selection': static, 'mask_channel_other': 0.0, 'no_mask_channel_overlap': False, 'mask_channel_min_space': 1, 'conv_pos': 128, 'conv_pos_groups': 16, 'latent_temp': [2.0, 0.5, 0.999995], 'skip_masked': False, 'skip_nomask': False, 'checkpoint_activations': False, 'required_seq_len_multiple': 2, 'depthwise_conv_kernel_size': 31, 'attn_type': '', 'pos_enc_type': 'abs', 'fp16': False}\n",
+      "2024-07-18 18:42:50 | INFO | fairseq.tasks.hubert_pretraining | current directory is c:\\Users\\PARK\\Desktop\\Project\\DDSP-SVC\n",
+      "2024-07-18 18:42:50 | INFO | fairseq.tasks.hubert_pretraining | HubertPretrainingTask Config {'_name': 'hubert_pretraining', 'data': 'metadata', 'fine_tuning': False, 'labels': ['km'], 'label_dir': 'label', 'label_rate': 50.0, 'sample_rate': 16000, 'normalize': False, 'enable_padding': False, 'max_keep_size': None, 'max_sample_size': 250000, 'min_sample_size': 32000, 'single_target': False, 'random_crop': True, 'pad_audio': False}\n",
+      "2024-07-18 18:42:50 | INFO | fairseq.models.hubert.hubert | HubertModel Config: {'_name': 'hubert', 'label_rate': 50.0, 'extractor_mode': default, 'encoder_layers': 12, 'encoder_embed_dim': 768, 'encoder_ffn_embed_dim': 3072, 'encoder_attention_heads': 12, 'activation_fn': gelu, 'layer_type': transformer, 'dropout': 0.1, 'attention_dropout': 0.1, 'activation_dropout': 0.0, 'encoder_layerdrop': 0.05, 'dropout_input': 0.1, 'dropout_features': 0.1, 'final_dim': 256, 'untie_final_proj': True, 'layer_norm_first': False, 'conv_feature_layers': '[(512,10,5)] + [(512,3,2)] * 4 + [(512,2,2)] * 2', 'conv_bias': False, 'logit_temp': 0.1, 'target_glu': False, 'feature_grad_mult': 0.1, 'mask_length': 10, 'mask_prob': 0.8, 'mask_selection': static, 'mask_other': 0.0, 'no_mask_overlap': False, 'mask_min_space': 1, 'mask_channel_length': 10, 'mask_channel_prob': 0.0, 'mask_channel_selection': static, 'mask_channel_other': 0.0, 'no_mask_channel_overlap': False, 'mask_channel_min_space': 1, 'conv_pos': 128, 'conv_pos_groups': 16, 'latent_temp': [2.0, 0.5, 0.999995], 'skip_masked': False, 'skip_nomask': False, 'checkpoint_activations': False, 'required_seq_len_multiple': 2, 'depthwise_conv_kernel_size': 31, 'attn_type': '', 'pos_enc_type': 'abs', 'fp16': False}\n",
       "c:\\Users\\PARK\\Desktop\\Project\\.venv\\lib\\site-packages\\torch\\nn\\utils\\weight_norm.py:28: UserWarning: torch.nn.utils.weight_norm is deprecated in favor of torch.nn.utils.parametrizations.weight_norm.\n",
       "  warnings.warn(\"torch.nn.utils.weight_norm is deprecated in favor of torch.nn.utils.parametrizations.weight_norm.\")\n"
      ]
@@ -327,7 +362,7 @@
      "text": [
       "  0%|          | 0/92 [00:00<?, ?it/s]c:\\Users\\PARK\\Desktop\\Project\\.venv\\lib\\site-packages\\torch\\nn\\functional.py:5504: UserWarning: 1Torch was not compiled with flash attention. (Triggered internally at ..\\aten\\src\\ATen\\native\\transformers\\cuda\\sdp_utils.cpp:455.)\n",
       "  attn_output = scaled_dot_product_attention(q, k, v, attn_mask, dropout_p, is_causal)\n",
-      "100%|██████████| 92/92 [00:21<00:00,  4.31it/s]\n"
+      "100%|██████████| 92/92 [00:19<00:00,  4.61it/s]\n"
      ]
     },
     {
@@ -341,7 +376,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2/2 [00:00<00:00,  4.44it/s]\n"
+      "100%|██████████| 4/4 [00:00<00:00,  5.20it/s]\n"
      ]
     }
    ],
@@ -402,7 +437,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. 학습"
+    "# 3. 학습\n",
+    "- 사용하려는 버전에 해당하는 셀 실행 후, 사용자 스스로가 적당하다고 판단한 시점에서 실행 중지\n",
+    "    - 이 작업은 오래 걸릴 수 있습니다. (테스트 환경 NVIDIA GeForce RTX 3050 6GB Laptop GPU로 1시간 30분 정도 소요)"
    ]
   },
   {
@@ -411,6 +448,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Ver 6.0 (Experimental) : Use `reflow.yaml` as config\n",
+    "\n",
     "from train_reflow import training\n",
     "\n",
     "training(args)"
@@ -422,19 +461,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\" # Old version : Use `combsub.yaml` as config\n",
-    "from train import training\n",
+    "# Ver 5.0 : Use `diffusion-fast.yaml` as config\n",
     "\n",
-    "training(args)\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 4. 결과물 추출"
+    "from train_diff import training\n",
+    "\n",
+    "training(args)"
    ]
   },
   {
@@ -443,6 +474,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Ver 2.5 : Use `combsub.yaml` as config\n",
+    "\n",
+    "from train import training\n",
+    "\n",
+    "training(args)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4. 결과물 추출\n",
+    "- 사용하려는 버전에 해당하는 셀 내용에 대해 환경 요소 설정 후 실행"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ver 6.0 (Experimental) : Use `reflow.yaml` as config\n",
+    "\n",
     "from types import SimpleNamespace\n",
     "from main_reflow import inference\n",
     "\n",
@@ -450,7 +505,7 @@
     "configures = {\n",
     "    # Values input Required\n",
     "    'model_ckpt'        :   'exp/reflow-test/model_00000.pt',   # 모델 체크포인트 경로\n",
-    "    'input'             :   'data/train/audio/name_1234.wav',   # 원본 노래 파일 경로\n",
+    "    'input'             :   'input.wav',                        # 원본 노래 파일 경로\n",
     "    'output'            :   'output.wav',                       # 출력 파일 저장할 경로\n",
     "    # Optional : Default values are available\n",
     "    'device'            :   device,\n",
@@ -477,7 +532,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\" # Old version : Use `combsub.yaml` as config\n",
+    "# Ver 5.0 : Use `diffusion-fast.yaml` as config\n",
+    "\n",
+    "from types import SimpleNamespace\n",
+    "from main_diff import inference\n",
+    "\n",
+    "# Configure setting\n",
+    "configures = {\n",
+    "    # Values input Required\n",
+    "    'diff_ckpt'         :   'exp/diffusion-test/model_00000.pt',    # 모델 체크포인트 경로\n",
+    "    'input'             :   'input.wav',                            # 원본 노래 파일 경로\n",
+    "    'output'            :   'output.wav',                           # 출력 파일 저장할 경로\n",
+    "    # Optional : Default values are available\n",
+    "    'ddsp_ckpt'         :   None,\n",
+    "    'device'            :   device,\n",
+    "    'spk_id'            :   '1',\n",
+    "    'spk_mix_dict'      :   'None',\n",
+    "    'key'               :   '0',\n",
+    "    'formant_shift_key' :   '0',\n",
+    "    'pitch_extractor'   :   'rmvpe',\n",
+    "    'f0_min'            :   '50',\n",
+    "    'f0_max'            :   '1100',\n",
+    "    'threhold'          :   '-60',\n",
+    "    'diff_spk_id'       :   'auto',\n",
+    "    'speedup'           :   'auto',\n",
+    "    'method'            :   'auto',\n",
+    "    'k_step'            :   None\n",
+    "}\n",
+    "cmd = SimpleNamespace(**configures)\n",
+    "\n",
+    "inference(cmd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ver 2.5 : Use `combsub.yaml` as config\n",
+    "\n",
     "from types import SimpleNamespace\n",
     "from main import inference\n",
     "\n",
@@ -485,7 +579,7 @@
     "configures = {\n",
     "    # Values input Required\n",
     "    'model_path'            :   'exp/combsub-test/model_00000.pt',  # 모델 체크포인트 경로\n",
-    "    'input'                 :   'data/train/audio/name_1234.wav',   # 원본 노래 파일 경로\n",
+    "    'input'                 :   'input.wav',                        # 원본 노래 파일 경로\n",
     "    'output'                :   'output.wav',                       # 출력 파일 저장할 경로\n",
     "    # Optional : Default values are available\n",
     "    'device'                :   device,\n",
@@ -501,8 +595,7 @@
     "}\n",
     "cmd = SimpleNamespace(**configures)\n",
     "\n",
-    "inference(cmd)\n",
-    "\"\"\""
+    "inference(cmd)"
    ]
   }
  ],
