--- a/notebook2.ipynb
+++ b/notebook2.ipynb
@@ -34,7 +34,7 @@
     "ORIGINAL_PATH   = 'preprocess/original/'\n",
     "DEMUCS_PATH     = 'preprocess/demucs/'\n",
     "NORM_PATH       = 'preprocess/norm/'\n",
-    "TEMP_LOG_PATH   = 'temp_ffmpeg_log.txt' # 무음 감지 로그 임시 저장 위치"
+    "TEMP_LOG_PATH   = 'temp_ffmpeg_log.txt' # Temporary path for silence detection logs"
    ]
   },
   {
@@ -97,34 +97,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Converting... : 0it [00:00, ?it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "def mp4_to_wav(input_dir: str, input_file: str, output_dir: str):\n",
-    "    \"\"\" mp4 파일을 wav 형식으로 변환합니다.\n",
-    "    args:\n",
-    "        input_dir (str): 입력 mp4 파일의 경로\n",
-    "        input_file (str): 입력 mp4 파일의 이름\n",
-    "        output_dir (str): 출력 wav 파일의 경로\n",
-    "    \"\"\"\n",
     "    ext = os.path.splitext(input_file)[1][1:]\n",
     "\n",
-    "    if ext is not \"mp4\":\n",
+    "    if ext != \"mp4\":\n",
     "        return \n",
     "    else:\n",
-    "        track = AudioSegment.from_file(os.path.join(input_dir,input_file), format='mp4')\n",
+    "        track = AudioSegment.from_file(os.path.join(input_dir, input_file), format='mp4')\n",
     "        track = track.set_frame_rate(44100)\n",
     "        track.export(os.path.join(output_dir, input_file[:-4]+\".wav\"), format='wav')\n",
     "\n",
     "filelist = traverse_dir(\n",
     "    MP4_DATA_PATH,\n",
-    "    extension='mp4',\n",
+    "    extensions='mp4',\n",
     "    is_pure=True,\n",
     "    is_sort=True,\n",
     "    is_ext=True)\n",
     "\n",
-    "for file in tqdm(filelist, desc=\"변환 중 \"):\n",
+    "for file in tqdm(filelist, desc=\"Converting... \"):\n",
     "    mp4_to_wav(MP4_DATA_PATH, file, ORIGINAL_PATH)"
    ]
   },
@@ -134,14 +136,36 @@
    "metadata": {},
    "source": [
     "## 1-2. Demucs (배경음 제거)\n",
-    "- preprocess/original 경로에 있는 wav 파일의 배경음(멜로디)을 제거 후 preprocess/demucs 경로에 저장"
+    "- preprocess/original 경로에 있는 파일의 배경음(멜로디 등)을 제거 후 preprocess/demucs 경로에 저장"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 319M/319M [00:22<00:00, 14.9MB/s] \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample rate: 44100\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Extracting vocals... : 0it [00:00, ?it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "from sep_wav import demucs\n",
     "\n",
@@ -154,19 +178,19 @@
    "metadata": {},
    "source": [
     "## 1-3. Normalize\n",
-    "- preprocess/demucs 경로에 있는 배경음이 제거된 데이터를 노멀라이즈 (sample rate 값 조정 가능) 후 preprocess/norm 경로에 저장"
+    "- preprocess/demucs 경로에 있는 데이터를 노멀라이징 (sample rate 값 조정 가능) 후 preprocess/norm 경로에 저장"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Normalizing... : 100%|██████████| 1/1 [00:02<00:00,  2.20s/it]\n"
+      "Normalizing... : 0it [00:00, ?it/s]\n"
      ]
     }
    ],
@@ -190,17 +214,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Cutting... :   0%|          | 0/1 [00:00<?, ?it/s]C:\\Users\\PARK\\AppData\\Local\\Temp\\ipykernel_10920\\3370198765.py:4: FutureWarning: get_duration() keyword argument 'filename' has been renamed to 'path' in version 0.10.0.\n",
-      "\tThis alias will be removed in version 1.0.\n",
-      "  duration = librosa.get_duration(filename=filepath)\n",
-      "Cutting... : 100%|██████████| 1/1 [00:03<00:00,  3.46s/it]\n"
+      "Cutting... : 0it [00:00, ?it/s]\n"
      ]
     }
    ],
@@ -208,7 +229,7 @@
     "import subprocess\n",
     "\n",
     "for filepath in tqdm(glob(NORM_PATH+\"*.wav\"), desc=\"Cutting... \"):\n",
-    "    duration = librosa.get_duration(filename=filepath)\n",
+    "    duration = librosa.get_duration(path=filepath)\n",
     "    max_last_seg_duration = 0\n",
     "    sep_duration_final = 15\n",
     "    sep_duration = 15\n",
@@ -236,14 +257,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Removing... : 100%|██████████| 94/94 [00:05<00:00, 16.86it/s]\n"
+      "Removing silence... : 100%|██████████| 92/92 [00:05<00:00, 17.28it/s]\n"
      ]
     }
    ],
@@ -251,7 +272,7 @@
     "from sep_wav import get_ffmpeg_args\n",
     "import subprocess\n",
     "\n",
-    "for filepath in tqdm(glob(args.data.train_path+\"/audio/*.wav\"), desc=\"Removing... \"):\n",
+    "for filepath in tqdm(glob(args.data.train_path+\"/audio/*.wav\"), desc=\"Removing silence... \"):\n",
     "    if os.path.exists(TEMP_LOG_PATH):\n",
     "        os.remove(TEMP_LOG_PATH)\n",
     "\n",
@@ -289,14 +310,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Moving... : 100%|██████████| 2/2 [00:00<00:00, 411.39it/s]\n"
+      "Moving... : 100%|██████████| 2/2 [00:00<00:00, 254.03it/s]\n"
      ]
     }
    ],
@@ -327,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -342,9 +363,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-07-18 18:42:50 | INFO | fairseq.tasks.hubert_pretraining | current directory is c:\\Users\\PARK\\Desktop\\Project\\DDSP-SVC\n",
-      "2024-07-18 18:42:50 | INFO | fairseq.tasks.hubert_pretraining | HubertPretrainingTask Config {'_name': 'hubert_pretraining', 'data': 'metadata', 'fine_tuning': False, 'labels': ['km'], 'label_dir': 'label', 'label_rate': 50.0, 'sample_rate': 16000, 'normalize': False, 'enable_padding': False, 'max_keep_size': None, 'max_sample_size': 250000, 'min_sample_size': 32000, 'single_target': False, 'random_crop': True, 'pad_audio': False}\n",
-      "2024-07-18 18:42:50 | INFO | fairseq.models.hubert.hubert | HubertModel Config: {'_name': 'hubert', 'label_rate': 50.0, 'extractor_mode': default, 'encoder_layers': 12, 'encoder_embed_dim': 768, 'encoder_ffn_embed_dim': 3072, 'encoder_attention_heads': 12, 'activation_fn': gelu, 'layer_type': transformer, 'dropout': 0.1, 'attention_dropout': 0.1, 'activation_dropout': 0.0, 'encoder_layerdrop': 0.05, 'dropout_input': 0.1, 'dropout_features': 0.1, 'final_dim': 256, 'untie_final_proj': True, 'layer_norm_first': False, 'conv_feature_layers': '[(512,10,5)] + [(512,3,2)] * 4 + [(512,2,2)] * 2', 'conv_bias': False, 'logit_temp': 0.1, 'target_glu': False, 'feature_grad_mult': 0.1, 'mask_length': 10, 'mask_prob': 0.8, 'mask_selection': static, 'mask_other': 0.0, 'no_mask_overlap': False, 'mask_min_space': 1, 'mask_channel_length': 10, 'mask_channel_prob': 0.0, 'mask_channel_selection': static, 'mask_channel_other': 0.0, 'no_mask_channel_overlap': False, 'mask_channel_min_space': 1, 'conv_pos': 128, 'conv_pos_groups': 16, 'latent_temp': [2.0, 0.5, 0.999995], 'skip_masked': False, 'skip_nomask': False, 'checkpoint_activations': False, 'required_seq_len_multiple': 2, 'depthwise_conv_kernel_size': 31, 'attn_type': '', 'pos_enc_type': 'abs', 'fp16': False}\n",
+      "2024-08-14 13:25:48 | INFO | fairseq.tasks.hubert_pretraining | current directory is c:\\Users\\PARK\\Desktop\\Project\\DDSP-SVC\n",
+      "2024-08-14 13:25:48 | INFO | fairseq.tasks.hubert_pretraining | HubertPretrainingTask Config {'_name': 'hubert_pretraining', 'data': 'metadata', 'fine_tuning': False, 'labels': ['km'], 'label_dir': 'label', 'label_rate': 50.0, 'sample_rate': 16000, 'normalize': False, 'enable_padding': False, 'max_keep_size': None, 'max_sample_size': 250000, 'min_sample_size': 32000, 'single_target': False, 'random_crop': True, 'pad_audio': False}\n",
+      "2024-08-14 13:25:48 | INFO | fairseq.models.hubert.hubert | HubertModel Config: {'_name': 'hubert', 'label_rate': 50.0, 'extractor_mode': default, 'encoder_layers': 12, 'encoder_embed_dim': 768, 'encoder_ffn_embed_dim': 3072, 'encoder_attention_heads': 12, 'activation_fn': gelu, 'layer_type': transformer, 'dropout': 0.1, 'attention_dropout': 0.1, 'activation_dropout': 0.0, 'encoder_layerdrop': 0.05, 'dropout_input': 0.1, 'dropout_features': 0.1, 'final_dim': 256, 'untie_final_proj': True, 'layer_norm_first': False, 'conv_feature_layers': '[(512,10,5)] + [(512,3,2)] * 4 + [(512,2,2)] * 2', 'conv_bias': False, 'logit_temp': 0.1, 'target_glu': False, 'feature_grad_mult': 0.1, 'mask_length': 10, 'mask_prob': 0.8, 'mask_selection': static, 'mask_other': 0.0, 'no_mask_overlap': False, 'mask_min_space': 1, 'mask_channel_length': 10, 'mask_channel_prob': 0.0, 'mask_channel_selection': static, 'mask_channel_other': 0.0, 'no_mask_channel_overlap': False, 'mask_channel_min_space': 1, 'conv_pos': 128, 'conv_pos_groups': 16, 'latent_temp': [2.0, 0.5, 0.999995], 'skip_masked': False, 'skip_nomask': False, 'checkpoint_activations': False, 'required_seq_len_multiple': 2, 'depthwise_conv_kernel_size': 31, 'attn_type': '', 'pos_enc_type': 'abs', 'fp16': False}\n",
       "c:\\Users\\PARK\\Desktop\\Project\\.venv\\lib\\site-packages\\torch\\nn\\utils\\weight_norm.py:28: UserWarning: torch.nn.utils.weight_norm is deprecated in favor of torch.nn.utils.parametrizations.weight_norm.\n",
       "  warnings.warn(\"torch.nn.utils.weight_norm is deprecated in favor of torch.nn.utils.parametrizations.weight_norm.\")\n"
      ]
@@ -360,9 +381,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/92 [00:00<?, ?it/s]c:\\Users\\PARK\\Desktop\\Project\\.venv\\lib\\site-packages\\torch\\nn\\functional.py:5504: UserWarning: 1Torch was not compiled with flash attention. (Triggered internally at ..\\aten\\src\\ATen\\native\\transformers\\cuda\\sdp_utils.cpp:455.)\n",
+      "  0%|          | 0/90 [00:00<?, ?it/s]c:\\Users\\PARK\\Desktop\\Project\\.venv\\lib\\site-packages\\torch\\nn\\functional.py:5504: UserWarning: 1Torch was not compiled with flash attention. (Triggered internally at ..\\aten\\src\\ATen\\native\\transformers\\cuda\\sdp_utils.cpp:455.)\n",
       "  attn_output = scaled_dot_product_attention(q, k, v, attn_mask, dropout_p, is_causal)\n",
-      "100%|██████████| 92/92 [00:19<00:00,  4.61it/s]\n"
+      "100%|██████████| 90/90 [00:19<00:00,  4.63it/s]\n"
      ]
     },
     {
@@ -376,7 +397,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4/4 [00:00<00:00,  5.20it/s]\n"
+      "100%|██████████| 6/6 [00:01<00:00,  4.81it/s]\n"
      ]
     }
    ],
