--- a/notebook2.ipynb
+++ b/notebook2.ipynb
@@ -30,7 +30,7 @@
     "args = utils.load_config('./configs/diffusion-fast.yaml')\n",
     "\n",
     "# Set path\n",
-    "MP4_DATA_PATH   = 'preprocess/mp4'\n",
+    "MP4_DATA_PATH   = 'preprocess/mp4/'\n",
     "ORIGINAL_PATH   = 'preprocess/original/'\n",
     "DEMUCS_PATH     = 'preprocess/demucs/'\n",
     "NORM_PATH       = 'preprocess/norm/'\n",
@@ -104,7 +104,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Converting... : 0it [00:00, ?it/s]\n"
+      "Converting... : 100%|██████████| 1/1 [00:00<00:00,  3.12it/s]\n"
      ]
     }
    ],
@@ -113,7 +113,7 @@
     "    ext = os.path.splitext(input_file)[1][1:]\n",
     "\n",
     "    if ext != \"mp4\":\n",
-    "        return \n",
+    "        return\n",
     "    else:\n",
     "        track = AudioSegment.from_file(os.path.join(input_dir, input_file), format='mp4')\n",
     "        track = track.set_frame_rate(44100)\n",
@@ -121,7 +121,7 @@
     "\n",
     "filelist = traverse_dir(\n",
     "    MP4_DATA_PATH,\n",
-    "    extensions='mp4',\n",
+    "    extensions=['mp4'],\n",
     "    is_pure=True,\n",
     "    is_sort=True,\n",
     "    is_ext=True)\n",
@@ -145,13 +145,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 319M/319M [00:22<00:00, 14.9MB/s] \n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -162,7 +155,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Extracting vocals... : 0it [00:00, ?it/s]\n"
+      "Extracting vocals... : 100%|██████████| 1/1 [00:05<00:00,  5.01s/it]\n"
      ]
     }
    ],
@@ -190,7 +183,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Normalizing... : 0it [00:00, ?it/s]\n"
+      "Normalizing... : 100%|██████████| 1/1 [00:00<00:00,  1.67it/s]\n"
      ]
     }
    ],
@@ -221,7 +214,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Cutting... : 0it [00:00, ?it/s]\n"
+      "Cutting... : 100%|██████████| 1/1 [00:01<00:00,  1.06s/it]\n"
      ]
     }
    ],
@@ -264,7 +257,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Removing silence... : 100%|██████████| 92/92 [00:05<00:00, 17.28it/s]\n"
+      "Removing silence... : 100%|██████████| 17/17 [00:00<00:00, 18.29it/s]\n"
      ]
     }
    ],
@@ -317,7 +310,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Moving... : 100%|██████████| 2/2 [00:00<00:00, 254.03it/s]\n"
+      "Moving... : 100%|██████████| 2/2 [00:00<00:00, 813.72it/s]\n"
      ]
     }
    ],
