--- a/notebook2.ipynb
+++ b/notebook2.ipynb
@@ -97,14 +97,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Converting... : 100%|██████████| 1/1 [00:00<00:00,  3.12it/s]\n"
+      "Converting... : 100%|██████████| 6/6 [00:02<00:00,  2.86it/s]\n"
      ]
     }
    ],
@@ -155,7 +155,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Extracting vocals... : 100%|██████████| 1/1 [00:05<00:00,  5.01s/it]\n"
+      "Extracting vocals... : 100%|██████████| 6/6 [00:31<00:00,  5.33s/it]\n"
      ]
     }
    ],
@@ -183,7 +183,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Normalizing... : 100%|██████████| 1/1 [00:00<00:00,  1.67it/s]\n"
+      "Normalizing... : 100%|██████████| 6/6 [00:04<00:00,  1.46it/s]\n"
      ]
     }
    ],
@@ -202,7 +202,7 @@
    "metadata": {},
    "source": [
     "## 1-4. Split\n",
-    "- preprocess/norm 경로에 있는 데이터를 15초 길이로 자른 후 data/train/audio 경로에 저장"
+    "- preprocess/norm 경로에 있는 데이터를 5초 길이로 자른 후 data/train/audio 경로에 저장"
    ]
   },
   {
@@ -214,7 +214,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Cutting... : 100%|██████████| 1/1 [00:01<00:00,  1.06s/it]\n"
+      "Cutting... : 100%|██████████| 6/6 [00:02<00:00,  2.78it/s]\n"
      ]
     }
    ],
@@ -223,20 +223,20 @@
     "\n",
     "for filepath in tqdm(glob(NORM_PATH+\"*.wav\"), desc=\"Cutting... \"):\n",
     "    duration = librosa.get_duration(path=filepath)\n",
-    "    max_last_seg_duration = 0\n",
-    "    sep_duration_final = 15\n",
-    "    sep_duration = 15\n",
-    "\n",
-    "    while sep_duration > 4:\n",
-    "        last_seg_duration = duration % sep_duration\n",
-    "        if max_last_seg_duration < last_seg_duration:\n",
-    "            max_last_seg_duration = last_seg_duration\n",
-    "            sep_duration_final = sep_duration\n",
-    "        sep_duration -= 1\n",
+    "    sep_duration = 5\n",
+    "    last_seg_duration = duration % sep_duration\n",
     "\n",
     "    filename = os.path.splitext(os.path.basename(filepath))[0]\n",
     "    out_filepath = os.path.join(args.data.train_path,\"audio\", f\"{filename}-%04d.wav\")\n",
-    "    subprocess.run(f'ffmpeg -i \"{filepath}\" -f segment -segment_time {sep_duration_final} \"{out_filepath}\" -y', capture_output=True, shell=True)"
+    "    subprocess.run(f'ffmpeg -i \"{filepath}\" -f segment -segment_time {sep_duration} \"{out_filepath}\" -y', capture_output=True, shell=True)\n",
+    "\n",
+    "    # Delete the file if the last segment is less than 2 seconds\n",
+    "    if last_seg_duration <= 2:\n",
+    "        generated_files = glob(os.path.join(args.data.train_path, \"audio\", f\"{filename}-*.wav\"))\n",
+    "        if generated_files:\n",
+    "            last_segment_filepath = sorted(generated_files, key=lambda x: int(x.split('-')[-1].split('.')[0]))[-1]\n",
+    "            if os.path.exists(last_segment_filepath):\n",
+    "                os.remove(last_segment_filepath)"
    ]
   },
   {
@@ -257,7 +257,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Removing silence... : 100%|██████████| 17/17 [00:00<00:00, 18.29it/s]\n"
+      "Removing... : 100%|██████████| 282/282 [00:17<00:00, 16.55it/s]\n"
      ]
     }
    ],
@@ -265,7 +265,7 @@
     "from sep_wav import get_ffmpeg_args\n",
     "import subprocess\n",
     "\n",
-    "for filepath in tqdm(glob(args.data.train_path+\"/audio/*.wav\"), desc=\"Removing silence... \"):\n",
+    "for filepath in tqdm(glob(args.data.train_path+\"/audio/*.wav\"), desc=\"Removing... \"):\n",
     "    if os.path.exists(TEMP_LOG_PATH):\n",
     "        os.remove(TEMP_LOG_PATH)\n",
     "\n",
@@ -310,7 +310,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Moving... : 100%|██████████| 2/2 [00:00<00:00, 813.72it/s]\n"
+      "Moving... : 100%|██████████| 2/2 [00:00<00:00, 399.40it/s]\n"
      ]
     }
    ],
@@ -356,9 +356,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-08-14 13:25:48 | INFO | fairseq.tasks.hubert_pretraining | current directory is c:\\Users\\PARK\\Desktop\\Project\\DDSP-SVC\n",
-      "2024-08-14 13:25:48 | INFO | fairseq.tasks.hubert_pretraining | HubertPretrainingTask Config {'_name': 'hubert_pretraining', 'data': 'metadata', 'fine_tuning': False, 'labels': ['km'], 'label_dir': 'label', 'label_rate': 50.0, 'sample_rate': 16000, 'normalize': False, 'enable_padding': False, 'max_keep_size': None, 'max_sample_size': 250000, 'min_sample_size': 32000, 'single_target': False, 'random_crop': True, 'pad_audio': False}\n",
-      "2024-08-14 13:25:48 | INFO | fairseq.models.hubert.hubert | HubertModel Config: {'_name': 'hubert', 'label_rate': 50.0, 'extractor_mode': default, 'encoder_layers': 12, 'encoder_embed_dim': 768, 'encoder_ffn_embed_dim': 3072, 'encoder_attention_heads': 12, 'activation_fn': gelu, 'layer_type': transformer, 'dropout': 0.1, 'attention_dropout': 0.1, 'activation_dropout': 0.0, 'encoder_layerdrop': 0.05, 'dropout_input': 0.1, 'dropout_features': 0.1, 'final_dim': 256, 'untie_final_proj': True, 'layer_norm_first': False, 'conv_feature_layers': '[(512,10,5)] + [(512,3,2)] * 4 + [(512,2,2)] * 2', 'conv_bias': False, 'logit_temp': 0.1, 'target_glu': False, 'feature_grad_mult': 0.1, 'mask_length': 10, 'mask_prob': 0.8, 'mask_selection': static, 'mask_other': 0.0, 'no_mask_overlap': False, 'mask_min_space': 1, 'mask_channel_length': 10, 'mask_channel_prob': 0.0, 'mask_channel_selection': static, 'mask_channel_other': 0.0, 'no_mask_channel_overlap': False, 'mask_channel_min_space': 1, 'conv_pos': 128, 'conv_pos_groups': 16, 'latent_temp': [2.0, 0.5, 0.999995], 'skip_masked': False, 'skip_nomask': False, 'checkpoint_activations': False, 'required_seq_len_multiple': 2, 'depthwise_conv_kernel_size': 31, 'attn_type': '', 'pos_enc_type': 'abs', 'fp16': False}\n",
+      "2024-11-02 04:08:50 | INFO | fairseq.tasks.hubert_pretraining | current directory is c:\\Users\\PARK\\Desktop\\Project\\DDSP-SVC\n",
+      "2024-11-02 04:08:50 | INFO | fairseq.tasks.hubert_pretraining | HubertPretrainingTask Config {'_name': 'hubert_pretraining', 'data': 'metadata', 'fine_tuning': False, 'labels': ['km'], 'label_dir': 'label', 'label_rate': 50.0, 'sample_rate': 16000, 'normalize': False, 'enable_padding': False, 'max_keep_size': None, 'max_sample_size': 250000, 'min_sample_size': 32000, 'single_target': False, 'random_crop': True, 'pad_audio': False}\n",
+      "2024-11-02 04:08:50 | INFO | fairseq.models.hubert.hubert | HubertModel Config: {'_name': 'hubert', 'label_rate': 50.0, 'extractor_mode': default, 'encoder_layers': 12, 'encoder_embed_dim': 768, 'encoder_ffn_embed_dim': 3072, 'encoder_attention_heads': 12, 'activation_fn': gelu, 'layer_type': transformer, 'dropout': 0.1, 'attention_dropout': 0.1, 'activation_dropout': 0.0, 'encoder_layerdrop': 0.05, 'dropout_input': 0.1, 'dropout_features': 0.1, 'final_dim': 256, 'untie_final_proj': True, 'layer_norm_first': False, 'conv_feature_layers': '[(512,10,5)] + [(512,3,2)] * 4 + [(512,2,2)] * 2', 'conv_bias': False, 'logit_temp': 0.1, 'target_glu': False, 'feature_grad_mult': 0.1, 'mask_length': 10, 'mask_prob': 0.8, 'mask_selection': static, 'mask_other': 0.0, 'no_mask_overlap': False, 'mask_min_space': 1, 'mask_channel_length': 10, 'mask_channel_prob': 0.0, 'mask_channel_selection': static, 'mask_channel_other': 0.0, 'no_mask_channel_overlap': False, 'mask_channel_min_space': 1, 'conv_pos': 128, 'conv_pos_groups': 16, 'latent_temp': [2.0, 0.5, 0.999995], 'skip_masked': False, 'skip_nomask': False, 'checkpoint_activations': False, 'required_seq_len_multiple': 2, 'depthwise_conv_kernel_size': 31, 'attn_type': '', 'pos_enc_type': 'abs', 'fp16': False}\n",
       "c:\\Users\\PARK\\Desktop\\Project\\.venv\\lib\\site-packages\\torch\\nn\\utils\\weight_norm.py:28: UserWarning: torch.nn.utils.weight_norm is deprecated in favor of torch.nn.utils.parametrizations.weight_norm.\n",
       "  warnings.warn(\"torch.nn.utils.weight_norm is deprecated in favor of torch.nn.utils.parametrizations.weight_norm.\")\n"
      ]
@@ -374,9 +374,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/90 [00:00<?, ?it/s]c:\\Users\\PARK\\Desktop\\Project\\.venv\\lib\\site-packages\\torch\\nn\\functional.py:5504: UserWarning: 1Torch was not compiled with flash attention. (Triggered internally at ..\\aten\\src\\ATen\\native\\transformers\\cuda\\sdp_utils.cpp:455.)\n",
+      "  0%|          | 0/243 [00:00<?, ?it/s]c:\\Users\\PARK\\Desktop\\Project\\.venv\\lib\\site-packages\\torch\\nn\\functional.py:5504: UserWarning: 1Torch was not compiled with flash attention. (Triggered internally at ..\\aten\\src\\ATen\\native\\transformers\\cuda\\sdp_utils.cpp:455.)\n",
       "  attn_output = scaled_dot_product_attention(q, k, v, attn_mask, dropout_p, is_causal)\n",
-      "100%|██████████| 90/90 [00:19<00:00,  4.63it/s]\n"
+      "100%|██████████| 243/243 [00:24<00:00,  9.76it/s]\n"
      ]
     },
     {
@@ -390,7 +390,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 6/6 [00:01<00:00,  4.81it/s]\n"
+      "100%|██████████| 2/2 [00:00<00:00, 10.56it/s]\n"
      ]
     }
    ],
@@ -453,7 +453,7 @@
    "source": [
     "# 3. 학습\n",
     "- 사용하려는 버전에 해당하는 셀 실행 후, 사용자 스스로가 적당하다고 판단한 시점에서 실행 중지\n",
-    "    - 이 작업은 오래 걸릴 수 있습니다. (테스트 환경 NVIDIA GeForce RTX 3050 6GB Laptop GPU로 1시간 30분 정도 소요)"
+    "    - 이 작업은 오래 걸릴 수 있습니다. (테스트 환경 NVIDIA GeForce RTX 3050 6GB Laptop GPU로 최소 1시간 이상 소요)"
    ]
   },
   {
@@ -615,7 +615,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ddsp",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -631,12 +631,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.10.11"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "b8a643f5fe528358e1cfac3836870fd104c9c787e6f994a831162d9d1f5f0281"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
